# Retag-Opus

./: .gitignore  CHANGELOG.md  README.md  cli.py  colors.py  constants.py  description_parser.py  main.py  music_tags.py  pyproject.toml  retag  tags_parser.py  utils.py
.github/data/: project-dictionary.txt
.github/workflows/: check.yaml  check.yml  deploy.yaml  deploy.yml
retag_opus/: __init__.py  __main__.py  app.py  cli.py  colors.py  constants.py  description_parser.py  exceptions.py  music_tags.py  tags_parser.py  utils.py
tests/: __init__.py  test_app.py  test_music_tags.py  test_tag_parser.py  test_utils.py
