[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[[tool.mypy.overrides]]
module = [
    "colorama",
    "shtab",
    "mutagen",
    "mutagen.oggopus",
    "simple_term_menu"
]
ignore_missing_imports = true

[tool.poetry]
name = "retag_opus"
version = "0.3.0"
description = "An app to tag music files downloaded from Youtube with all the information available in the Youtube description."
authors = ["Simon Bengtsson <gevhaz@tutanota.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
retag = "retag_opus.app:run"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.4"
mutagen = "^1.45.1"
simple-term-menu = "^1.4.1"
shtab = "^1.5.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.960"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
