[tool.coverage.run]
branch = true
source = [ "./retag_opus/" ]

[tool.coverage.report]
show_missing = true
fail_under = 95.73
exclude_lines = [
    'import sys',
    'from retag_opus import app',
    'if __name__ == "__main__":',
    '    sys.exit(app.run())',
]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
exclude = "^tests/test_app.py"
disable_error_code = ["import-untyped"]

[tool.poetry]
name = "retag_opus"
version = "0.4.1"
description = "An app to tag music files downloaded from Youtube with all the information available in the Youtube description."
authors = ["Simon Bengtsson <gevhaz@tutanota.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
retag = "retag_opus.app:run"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.4"
mutagen = "^1.45.1"
simple-term-menu = "^1.4.1"
shtab = "^1.5.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^1.6.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
coverage = "^6.4.4"
pytest-cov = "^3.0.0"
mock = "^4.0.3"
types-mock = "^4.0.15"
pytest = "^7.2.2"

[tool.poetry.group.dev-dependencies.dependencies]
pydub = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
